Try new location for css

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,7 +10,7 @@
     </script>
 {% seo %}
     <!-- <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}"> -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/pipedream/assets/css/style.css">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
